# sensAI

./: .gitignore  INSTALL_GH_CLI.md  Makefile  README.md  TASKS_SERVER.md  pyproject.toml  requirements.txt
.cursor/rules/: streamlit-best-practices.mdc
backend/: prompts.py
backend/prompts/: README.md  __init__.py  base_prompts.py  language_specific.py  specialized_prompts.py
docs/: CLAUDE.md  GITHUB_PROJECT_CREATED.md  GIT_WORKFLOW.md  HOW_TO_LINK_PROJECT.md  PROJECT_ROADMAP.md  README.md  SETUP_SUMMARY.md  TASKS_AI.md  TASKS_FRONTEND.md
frontend/: app.py
frontend/.streamlit/: config.toml
frontend/components/: code_input.py  ui.py
frontend/pages/: dashboard.py  history.py
frontend/services/: api_client.py
frontend/utils/: helpers.py
sensai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
